# SATySFi-fonts-noto-serif

./: README.md  Satyristes  doc-fonts-noto-serif.saty  fonts.satysfi-hash  noto-serif.yml  satysfi-fonts-noto-serif-doc.opam  satysfi-fonts-noto-serif.opam
